
SUBDIRS = clipper examples

EXTRA_DIST =               dox/develop_hkl.dox        dox/hkl_objs.png \
dox/class_overview.dox     dox/develop_map.dox        dox/img_container.eps \
dox/clipper.dox            dox/clipper_minimol.dox    dox/img_container.png \
dox/clipper_hierarchy.eps  dox/donors.eps             dox/include.eps \
dox/clipper_hierarchy.png  dox/donors.png             dox/include.png \
dox/container.eps          dox/hier_rep.eps           dox/installation.dox \
dox/container.png          dox/hier_rep.png           dox/map_p1.eps \
dox/conventions.dox        dox/hierarchy.eps          dox/map_p1.png \
dox/coordtypes.dox         dox/hierarchy.png          dox/map_p2.eps \
dox/develop.dox            dox/hkl_objs.eps           dox/map_p2.png

# clipper-config has been outdated (non-working) for a while,
# it needs to be either updated or removed
#bin_SCRIPTS = clipper-config

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = clipper.pc

ACLOCAL_AMFLAGS = -I m4
